--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,53 @@
         tools:layout="@layout/fragment_default_fragment_home_page"
         class="com.seeds.seeds_birthdayreminder.Fragment.DefaultFragmentHomePage"
         />
-    <Toolbar
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="10"/>
+        android:layout_weight="10">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="100">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:orientation="vertical"
+                android:layout_height="match_parent"
+                android:onClick="onClick"
+                android:id="@+id/left_fragment_view"
+                android:background="@color/colorPrimary"
+                android:layout_weight="40">
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="20"
+                android:gravity="center"
+                android:layout_height="match_parent">
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@android:drawable/ic_input_add"
+                android:layout_gravity="center"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:onClick="onClick"
+                android:orientation="vertical"
+                android:id="@+id/right_fragment_view"
+                android:background="@color/colorAccent"
+                android:layout_height="match_parent"
+                android:layout_weight="40">
+
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
+
+    </android.support.v7.widget.Toolbar>
 
 
 </LinearLayout>
