--- a/Android Application/app/src/main/res/layout/activity_main.xml
+++ b/Android Application/app/src/main/res/layout/activity_main.xml
@@ -8,63 +8,117 @@
     android:orientation="vertical"
     tools:context=".Management.MainActivity">
 
+    <view
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/grey_c"/>
 
     <fragment
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="90"
+        android:layout_weight="85"
         android:id="@+id/main_fragment"
         tools:layout="@layout/fragment_default_fragment_home_page"
-        class="com.seeds.seeds_birthdayreminder.Fragment.DefaultFragmentHomePage"
-        />
-    <android.support.v7.widget.Toolbar
+        class="com.seeds.seeds_birthdayreminder.Fragment.DefaultFragmentHomePage" />
+
+    <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="10">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="100">
+        android:layout_weight="0.2"
+        android:background="@color/grey_b"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:orientation="horizontal"
+        android:weightSum="100">
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:orientation="vertical"
                 android:layout_height="match_parent"
                 android:onClick="onClick"
                 android:id="@+id/left_fragment_view"
-                android:background="@color/colorPrimary"
-                android:layout_weight="40">
+                android:layout_weight="42.5"
+                android:weightSum="100"
+                >
+                
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="22"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="55"
+                    android:weightSum="100"
+                    android:orientation="horizontal">
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="40"/>
+
+                    <ImageButton
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@mipmap/birthday_green"
+                        android:layout_weight="20"/>
+
+                </LinearLayout>
 
             </LinearLayout>
-            <LinearLayout
+
+
+            <ImageButton
                 android:layout_width="0dp"
-                android:layout_weight="20"
-                android:gravity="center"
-                android:layout_height="match_parent">
-            <android.support.design.widget.FloatingActionButton
+                android:layout_height="match_parent"
+                android:layout_weight="15"
+                android:background="@mipmap/add"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:onClick="onClick"
+            android:id="@+id/right_fragment_view"
+            android:layout_weight="42.5"
+            android:weightSum="100"
+            >
+
+            <Space
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/main_fab"
-                android:src="@android:drawable/ic_input_add"
-                android:layout_gravity="center"/>
-            </LinearLayout>
+                android:layout_height="0dp"
+                android:layout_weight="22"/>
+
             <LinearLayout
-                android:layout_width="0dp"
-                android:onClick="onClick"
-                android:orientation="vertical"
-                android:id="@+id/right_fragment_view"
-                android:background="@color/colorAccent"
-                android:layout_height="match_parent"
-                android:layout_weight="40">
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="55"
+                android:weightSum="100"
+                android:orientation="horizontal">
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="40"/>
+
+                <ImageButton
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="@mipmap/calendar_grey"
+                    android:layout_weight="20"/>
 
             </LinearLayout>
-
-
-
 
         </LinearLayout>
 
-    </android.support.v7.widget.Toolbar>
+
+    </LinearLayout>
 
 
 </LinearLayout>
