--- a/Android Application/app/src/main/res/layout/fragment_default_fragment_home_page.xml
+++ b/Android Application/app/src/main/res/layout/fragment_default_fragment_home_page.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.DefaultFragmentHomePage">
+    tools:context=".Fragment.DefaultFragmentHomePage"
+    android:weightSum="100"
+    android:orientation="vertical">
 
 
 </FrameLayout>
