XML files are done .

--- a/Android Application/app/src/main/res/layout/activity_edit_birthday.xml
+++ b/Android Application/app/src/main/res/layout/activity_edit_birthday.xml
@@ -176,8 +176,7 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:text="Alex Julig"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
                 <Space
                     android:layout_width="match_parent"
@@ -229,7 +228,7 @@
                     android:text="1998/01/19"
                     android:textColor="#000000"
                     android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:clickable="true"/>
 
                 <Space
                     android:layout_width="match_parent"
@@ -279,8 +278,7 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:text="example@gmail.com"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
                 <Space
                     android:layout_width="match_parent"
@@ -330,8 +328,7 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:text="09375679821"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
                 <Space
                     android:layout_width="match_parent"
@@ -392,8 +389,7 @@
                         android:layout_weight="88"
                         android:background="@null"
                         android:text="Happy Birthday My Dear..."
-                        android:textSize="11sp"
-                        android:textStyle="bold" />
+                        android:textSize="11sp" />
 
                 </LinearLayout>
             </LinearLayout>
