--- a/Android Application/app/src/main/res/layout/fragment_birthday_overview.xml
+++ b/Android Application/app/src/main/res/layout/fragment_birthday_overview.xml
@@ -13,51 +13,6 @@
         android:layout_height="0dp"
         android:layout_weight="3" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:orientation="horizontal"
-        android:weightSum="100">
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="8" />
-
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:background="@mipmap/back"
-            android:orientation="horizontal" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="68"
-            android:gravity="center"
-            android:text="Birthday"
-            android:textColor="@color/grey_c"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="7"
-            android:background="@mipmap/settings"
-            android:orientation="horizontal" />
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="8" />
-
-
-    </LinearLayout>
-
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -126,6 +81,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/overview_name"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -155,6 +111,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/overview_date"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -198,6 +155,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/overview_email"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -227,6 +185,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/overview_phone"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -265,6 +224,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/overview_letter"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -306,6 +266,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/overview_nextbd"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -335,14 +296,15 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/overview_lastbd"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
+                android:gravity="center"
                 android:text="86 Days ago (Tuesday)"
-                android:textSize="15sp"
-                android:textStyle="bold"
                 android:textColor="@color/grey_c"
-                android:gravity="center"/>
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -378,6 +340,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/overview_age"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -407,6 +370,7 @@
                 android:gravity="center"/>
 
             <TextView
+                android:id="@+id/overview_relation"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
